--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@ font-weight: bold;
 nav ol {
   list-style-type: none;
 }
+nav a {
+  color:793284;
+  text-decoration: none;
+}
 nav a:hover {
   color: #b42885;
   text-decoration: underline;
