--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ img {
   width: 100%
 }
 h1, h2 {
+font-family: 'Patua One', sans-serif;
 color: #5d8432;
 text-transform: uppercase;
 }
@@ -22,6 +23,7 @@ figcaption {
   text-align: center;
 }
 nav {
+font-family: 'Patua One', sans-serif;
 font-size: 1.125rem;
 font-weight: bold;
 }
@@ -29,7 +31,7 @@ nav ol {
   list-style-type: none;
 }
 nav a {
-  color:793284;
+  color: #793284;
   text-decoration: none;
 }
 nav a:hover {
