--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,24 @@
 html {
 box-sizing: border-box;
 background-color: #f2f1ed;
-font-family: Georgia, serif;
-line-height: 1.5;
-
+  box-sizing: border-box;
+  background-color: #f2f1ed;
+  font-family: Georgia, serif;
+  line-height: 1.5;
 }
+
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
 img {
-  width: 100%
+  width: 100%;
 }
+
 h1, h2 {
-font-family: 'Patua One', sans-serif;
-color: #5d8432;
-text-transform: uppercase;
+  font-family: "Patua One", sans-serif;
+  color: #5d8432;
+  text-transform: uppercase;
 }
 
 figcaption {
@@ -22,22 +26,27 @@ figcaption {
   font-style: italic;
   text-align: center;
 }
+
 nav {
-font-family: 'Patua One', sans-serif;
-font-size: 1.125rem;
-font-weight: bold;
+  font-family: "Patua One", sans-serif;
+  font-size: 1.125rem;
+  font-weight: bold;
 }
+
 nav ol {
   list-style-type: none;
 }
+
 nav a {
   color: #793284;
   text-decoration: none;
 }
+
 nav a:hover {
   color: #b42885;
   text-decoration: underline;
 }
+
 .intro {
-  font-size:1rem;
+  font-size: 1rem;
 }
